[gd_scene load_steps=13 format=3 uid="uid://6janxgompwlu"]

[ext_resource type="Texture2D" uid="uid://dekns2g2msqtn" path="res://assets/sprites/carro de policia/police_car.png" id="1_r6wn4"]
[ext_resource type="Script" path="res://scenes/game/actors/police/police.gd" id="1_ysceu"]
[ext_resource type="AudioStream" uid="uid://chy8a4lubfumr" path="res://assets/audio/sfx/policie/police-operation-siren-144229.mp3" id="3_un7px"]

[sub_resource type="Gradient" id="Gradient_4xjy3"]
offsets = PackedFloat32Array(0, 0.686782)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o18f7"]
gradient = SubResource("Gradient_4xjy3")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ochci"]
size = Vector3(5, 2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_hrrft"]
size = Vector3(7, 5, 20)

[sub_resource type="Animation" id="Animation_n716q"]
resource_name = "approach"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 2.0, 3.0, 4.0, 5.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../police/Sprite3D_P1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../police2/Sprite3D_P2:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite3D_P3:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Lights:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 30.0, 60.0, 90.0, 120.0, 150.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Lights:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}

[sub_resource type="Animation" id="Animation_okhj0"]
resource_name = "approach"
length = 2.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../police/Sprite3D_P1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../police2/Sprite3D_P2:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite3D_P3:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Lights:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [150.0, 180.0, 210.0, 240.0, 270.0, 300.0, 330.0, 360.0, 390.0, 420.0, 450.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Lights:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1, 0.1, 0.0, 0.1, 0.0, 0.1]
}

[sub_resource type="Animation" id="Animation_rqac2"]
resource_name = "riding"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../police/Sprite3D_P1:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../police2/Sprite3D_P2:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite3D_P3:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.1]
}

[sub_resource type="Animation" id="Animation_ef444"]
resource_name = "approach"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [5.0, 4.0, 3.0, 2.0, 1.0, Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../police/Sprite3D_P1:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../police2/Sprite3D_P2:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite3D_P3:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Lights:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [150.0, 120.0, 90.0, 60.0, 30.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Lights:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1, 0.0, 0.1, 0.0, 0.1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xmtct"]
_data = {
"approach": SubResource("Animation_n716q"),
"approach_again": SubResource("Animation_okhj0"),
"driving": SubResource("Animation_rqac2"),
"retreating": SubResource("Animation_ef444")
}

[node name="Police" type="Node3D"]
script = ExtResource("1_ysceu")

[node name="Lights" type="Node2D" parent="."]
top_level = true

[node name="PoliceLight" type="PointLight2D" parent="Lights"]
position = Vector2(50, 390)
scale = Vector2(3, 3)
color = Color(1, 0, 0, 1)
texture = SubResource("GradientTexture2D_o18f7")

[node name="PoliceLight2" type="PointLight2D" parent="Lights"]
position = Vector2(45, 450)
scale = Vector2(3, 3)
color = Color(0, 0, 1, 1)
energy = 5.0
texture = SubResource("GradientTexture2D_o18f7")

[node name="PoliceLight3" type="PointLight2D" parent="Lights"]
position = Vector2(55, 520)
scale = Vector2(3, 3)
color = Color(1, 0, 0, 1)
energy = 5.0
texture = SubResource("GradientTexture2D_o18f7")

[node name="police" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, -3)
gravity_scale = 0.0

[node name="Sprite3D_P1" type="Sprite3D" parent="police"]
transform = Transform3D(15, 0, 0, 0, 10.6066, 10.6066, 0, -10.6066, 10.6066, 0, 0, 0)
flip_h = true
texture_filter = 0
texture = ExtResource("1_r6wn4")
metadata/_edit_lock_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="police"]
shape = SubResource("BoxShape3D_ochci")
metadata/_edit_lock_ = true

[node name="police2" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 1.5, -1)
gravity_scale = 0.0

[node name="Sprite3D_P2" type="Sprite3D" parent="police2"]
transform = Transform3D(15, 0, 0, 0, 10.6066, 10.6066, 0, -10.6066, 10.6066, 0, 0, 0)
flip_h = true
texture_filter = 0
texture = ExtResource("1_r6wn4")
metadata/_edit_lock_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="police2"]
shape = SubResource("BoxShape3D_ochci")
metadata/_edit_lock_ = true

[node name="police3" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 1.5, 1)
gravity_scale = 0.0

[node name="Sprite3D_P3" type="Sprite3D" parent="police3"]
transform = Transform3D(15, 0, 0, 0, 10.6066, 10.6066, 0, -10.6066, 10.6066, 0, 0, 0)
flip_h = true
texture_filter = 0
texture = ExtResource("1_r6wn4")
metadata/_edit_lock_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="police3"]
shape = SubResource("BoxShape3D_ochci")
metadata/_edit_lock_ = true

[node name="HitBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -4, 2, 0)
shape = SubResource("BoxShape3D_hrrft")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../police3")
libraries = {
"": SubResource("AnimationLibrary_xmtct")
}

[node name="TimerLights" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TimerChase" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_un7px")
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="TimerLights" to="." method="_on_timer_lights_timeout"]
[connection signal="timeout" from="TimerChase" to="." method="_on_timer_chase_timeout"]
